# GRIL-Calib

./: CMakeLists.txt  README.md  package.xml
config/: ouster64.yaml  velodyne16.yaml  velodyne32.yaml
config/hilti/: Basement_3.yaml  Basement_4.yaml
config/m2dgr/: velodyne_m2dgr_gate01.yaml  velodyne_m2dgr_hall04.yaml  velodyne_m2dgr_lift04.yaml  velodyne_m2dgr_rotation02.yaml  velodyne_m2dgr_street08.yaml
config/s3e/: velodyne_s3e_bob_lab01.yaml  velodyne_s3e_bob_lab02.yaml
docker/: Dockerfile  container_run.sh  ros_entrypoint.sh
include/: IMU_Processing.hpp  common_lib.h  matplotlibcpp.h  preprocess.h  so3_math.h
include/Fusion/: FusionMath.h
include/Gril_Calib/: Gril_Calib.cpp  Gril_Calib.h
include/GroundSegmentation/: patchworkpp.hpp  utils.hpp
launch/: mapping_velodyne.launch.py  ouster.launch  velodyne.launch
launch/hilti/: hilti_basement_3.launch  hilti_basement_4.launch
launch/m2dgr/: m2dgr_gate01.launch  m2dgr_hall04.launch  m2dgr_lift04.launch  m2dgr_rotation02.launch  m2dgr_street08.launch
launch/s3e/: s3e_bob_lab01.launch  s3e_bob_lab02.launch
result/: GRIL_Calib_result.txt
rviz_cfg/: hilti.rviz  m2dgr.rviz  s3e.rviz  spinning.rviz  velodyne.rviz
src/: laserMapping.cpp  preprocess.cpp
